# devtools_scicomp_project_2025

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_test.yml
experiments/: config.yaml  config_numpy.yaml  config_spambase.yaml  config_spambase_numba.yaml  config_template.yaml.j2
logs/: scalability.py  spam_numba_knn_classifier.txt
scripts/: 00-experiment_generator.py  01-jobfile  01-run-experiments.sh  run-experiments.sh  run.py
shell/: submit.sbatch  submit.sh  submit_spam.sh
src/pyclassify/: _compile.py  classifier.py  datamodule.py  model.py  module.py  utils.py
src/pymatmatmul/: __init__.py  gen_matrices.py  matmul.py  mpi_utils.py  numba_compiled_matmul.py  profiler.py  utils.py
test/: test_.py
