# Choosing a build backend:
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pyclassify"
version = "0.0.1"
description = "devtools_scicomp_project_2025"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Isac Pasianotto", email = "yh4mop12z@gmail.com" }]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts", "tests", "shell", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]