# Choosing a build backend:
[build-system]
requires = ["setuptools", "numba", "numpy"]
build-backend = "setuptools.build_meta"


[project]
name = "pymatmatmul"
version = "0.0.1"
description = "devtools_scicomp_project_2025"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Isac Pasianotto", email = "ISAC.PASIANOTTO@phd.units.it" }, {name = "Niccolò Tosato", email = "NICCOLO.TOSATO@phd.units.it"}]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts", "tests", "shell", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]

